# inspector_plus

./: .gitignore  CLAUDE.md  README.md  SPEC.md
.raw/: .manifest.json
backend/: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  test_app.py  test_app_commands.py  test_base.py  test_device_bridges.py  test_validate.py  test_ws.py  test_ws_server.py
backend/commands/: __init__.py  app_commands.py  ios_app_commands.py
backend/device/: __init__.py  accessibility_utils.py  android_bridge.py  base.py  ios_bridge.py  recorder.py  utils.py
backend/mcp/: package-lock.json  package.json
backend/mcp/src/: server.ts
backend/mcp/src/__tests__/: tree-cache.test.ts  tree-service.test.ts  types.test.ts
backend/mcp/src/cache/: tree-cache.ts
backend/mcp/src/services/: tree-service.ts
backend/mcp/src/tools/: hierarchy.ts  search.ts  traversal.ts
backend/mcp/src/types/: mcp-types.ts
backend/tests/: test_android_helpers.py  test_ios_app_commands.py  test_ios_recorder_session.py  test_main_helpers.py  test_recorder_session.py
docs/: ARCHITECTURE.md  DEVELOPMENT.md  MCP_QUICKREF.md  README.md
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: backend_manager.rs  commands.rs  main.rs  mcp_manager.rs
wiki/: index.md  log.md
(+85 files in other folders)
