[project]
name = "inspector-backend"
version = "0.1.0"
description = "Android UI Inspector Backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.0",
    "websockets==12.0",
    "setuptools<82",
    "lxml>=5.0.0",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
