[package]
name = "inspector-plus"
version = "0.0.1"
description = "InspectorPlus - Mobile UI Inspector"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["process", "sync", "time", "rt-multi-thread"] }
